<resources>
    <string name="app_name">Abacus</string>
    <string name="base_application">Abacus | Technical Test</string>

    <string name="menu_choose">Choose Menu</string>
    <string name="menu_add">Add</string>
    <string name="menu_subtract">Subtract</string>
    <string name="menu_multiply">Multiply</string>
    <string name="menu_divide">Divide</string>
    <string name="menu_split_eq">Split Eq</string>
    <string name="menu_split_num">Split Num</string>
    <string name="input_params">Input Params</string>

    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="clear">Clear</string>
    <string name="result">Result</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="foto">Foto</string>
    <string name="next">Next</string>
    <string name="retry">Retry</string>
</resources>
