<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.exomatik.abacus.ui.main.beranda.BerandaFragment">
    <data>
        <variable
            name="viewModel"
            type="com.exomatik.abacus.ui.main.beranda.BerandaViewModel" />
    </data>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        snackbar="@{viewModel.status}"
        android:theme="@style/CustomStyle"
        android:background="@color/white"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textStandardWhite"
            android:textSize="@dimen/text_h4"
            android:textColor="@color/gray3"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/text_h3"
            android:layout_marginBottom="@dimen/h3"
            android:layout_marginEnd="@dimen/_30"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:id="@+id/textMenu"
            android:text="@={viewModel.textMenu}"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textStandardWhite"
            android:textSize="@dimen/text_h3"
            android:layout_below="@+id/textMenu"
            android:layout_marginTop="@dimen/h3"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:text="@string/input_params"
            android:textColor="@color/gray3"
            android:id="@+id/textInput"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etParams"
            android:layout_below="@+id/textInput"
            style="@style/customEditText"
            android:layout_width="@dimen/_200"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/h2"
            android:layout_marginTop="@dimen/h2"
            android:layout_marginEnd="@dimen/h2"
            app:errorEnabled="true"
            app:errorTextAppearance="@style/error_appearance"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            >

            <com.google.android.material.textfield.TextInputEditText
                style="@style/textStandardWhite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:maxLines="1"
                android:text="@={viewModel.etParams}"
                android:textAlignment="center"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="@dimen/text_h3"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/etParams"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/h2"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ln_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_1"
                    android:layout_width="@dimen/_80"
                    android:layout_height="@dimen/_60"
                    android:layout_margin="@dimen/h2"
                    android:background="@drawable/border_round_full_hitam_putih"
                    android:elevation="@dimen/h1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_1"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h5"
                    android:onClick="@{()-> viewModel.onClickSetText(1)}"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_2"
                    android:layout_width="@dimen/_80"
                    android:layout_height="@dimen/_60"
                    android:layout_margin="@dimen/h2"
                    android:background="@drawable/border_round_full_hitam_putih"
                    android:elevation="@dimen/h1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h5"
                    android:onClick="@{()-> viewModel.onClickSetText(2)}"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_3"
                    android:layout_width="@dimen/_80"
                    android:layout_height="@dimen/_60"
                    android:layout_margin="@dimen/h2"
                    android:background="@drawable/border_round_full_hitam_putih"
                    android:elevation="@dimen/h1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h5"
                    android:onClick="@{()-> viewModel.onClickSetText(3)}"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ln_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_4"
                    android:layout_width="@dimen/_80"
                    android:layout_height="@dimen/_60"
                    android:layout_margin="@dimen/h2"
                    android:background="@drawable/border_round_full_hitam_putih"
                    android:elevation="@dimen/h1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h5"
                    android:onClick="@{()-> viewModel.onClickSetText(4)}"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_5"
                    android:layout_width="@dimen/_80"
                    android:layout_height="@dimen/_60"
                    android:layout_margin="@dimen/h2"
                    android:background="@drawable/border_round_full_hitam_putih"
                    android:elevation="@dimen/h1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h5"
                    android:onClick="@{()-> viewModel.onClickSetText(5)}"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_6"
                    android:layout_width="@dimen/_80"
                    android:layout_height="@dimen/_60"
                    android:layout_margin="@dimen/h2"
                    android:background="@drawable/border_round_full_hitam_putih"
                    android:elevation="@dimen/h1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_6"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h5"
                    android:onClick="@{()-> viewModel.onClickSetText(6)}"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ln_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_7"
                    android:layout_width="@dimen/_80"
                    android:layout_height="@dimen/_60"
                    android:layout_margin="@dimen/h2"
                    android:background="@drawable/border_round_full_hitam_putih"
                    android:elevation="@dimen/h1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_7"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h5"
                    android:onClick="@{()-> viewModel.onClickSetText(7)}"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_8"
                    android:layout_width="@dimen/_80"
                    android:layout_height="@dimen/_60"
                    android:layout_margin="@dimen/h2"
                    android:background="@drawable/border_round_full_hitam_putih"
                    android:elevation="@dimen/h1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_8"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h5"
                    android:onClick="@{()-> viewModel.onClickSetText(8)}"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_9"
                    android:layout_width="@dimen/_80"
                    android:layout_height="@dimen/_60"
                    android:layout_margin="@dimen/h2"
                    android:background="@drawable/border_round_full_hitam_putih"
                    android:elevation="@dimen/h1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_9"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h5"
                    android:onClick="@{()-> viewModel.onClickSetText(9)}"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ln_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_clear"
                    android:layout_width="@dimen/_80"
                    android:layout_height="@dimen/_60"
                    android:layout_margin="@dimen/h2"
                    android:background="@drawable/border_round_full_hitam_putih"
                    android:elevation="@dimen/h1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/clear"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h5"
                    android:onClick="@{()-> viewModel.onClickClearText()}"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_0"
                    android:layout_width="@dimen/_80"
                    android:layout_height="@dimen/_60"
                    android:layout_margin="@dimen/h2"
                    android:background="@drawable/border_round_full_hitam_putih"
                    android:elevation="@dimen/h1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/_0"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h5"
                    android:onClick="@{()-> viewModel.onClickSetText(0)}"
                    />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnNext"
                    android:layout_width="@dimen/_80"
                    android:layout_height="@dimen/_60"
                    android:layout_margin="@dimen/h2"
                    android:background="@drawable/border_round_full_hitam_putih"
                    android:elevation="@dimen/h1"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/black"
                    android:textSize="@dimen/text_h5"
                    android:onClick="@{()-> viewModel.onClickNext()}"
                    />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnResult"
                android:layout_marginTop="@dimen/_30"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60"
                android:background="@drawable/btn_gradient_blue"
                android:elevation="@dimen/h1"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/result"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_h5"
                android:onClick="@{()-> viewModel.onClickResult()}"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.nambimobile.widgets.efab.ExpandableFabLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/btnAction"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/h3"
            android:layout_marginEnd="@dimen/h3"
            >
            <com.nambimobile.widgets.efab.Overlay
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <com.nambimobile.widgets.efab.ExpandableFab
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginBottom="@dimen/h2"
                android:layout_marginEnd="@dimen/h2"
                app:efab_orientation="portrait"
                app:efab_icon="@drawable/ic_menu_white"
                app:efab_iconAnimationRotationDeg="-225"
                app:efab_closingAnticipateTension="0"
                />

            <com.nambimobile.widgets.efab.FabOption
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_orientation="portrait"
                app:label_text="@string/menu_add"
                android:src="@drawable/ic_add_white"
                android:onClick="@{()-> viewModel.onClickChangeMenu(1)}"
                />

            <com.nambimobile.widgets.efab.FabOption
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_orientation="portrait"
                app:label_text="@string/menu_subtract"
                android:src="@drawable/ic_min_white"
                android:onClick="@{()-> viewModel.onClickChangeMenu(2)}"
                />

            <com.nambimobile.widgets.efab.FabOption
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_orientation="portrait"
                app:label_text="@string/menu_multiply"
                android:src="@drawable/ic_close_white"
                android:onClick="@{()-> viewModel.onClickChangeMenu(3)}"
                />
            <com.nambimobile.widgets.efab.FabOption
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_orientation="portrait"
                app:label_text="@string/menu_divide"
                android:src="@drawable/ic_divide_white"
                android:onClick="@{()-> viewModel.onClickChangeMenu(4)}"
                />
            <com.nambimobile.widgets.efab.FabOption
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_orientation="portrait"
                app:label_text="@string/menu_split_eq"
                android:src="@drawable/ic_split_white"
                android:onClick="@{()-> viewModel.onClickChangeMenu(5)}"
                />
            <com.nambimobile.widgets.efab.FabOption
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:fab_orientation="portrait"
                app:label_text="@string/menu_split_num"
                android:src="@drawable/ic_split_white"
                android:onClick="@{()-> viewModel.onClickChangeMenu(6)}"
                />
        </com.nambimobile.widgets.efab.ExpandableFabLayout>

        <include layout="@layout/progress_loading"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            visible="@{viewModel.isShowLoading}"
            android:id="@+id/progress"
            android:visibility="gone"
            android:layout_centerInParent="true"
            />

        <include layout="@layout/error_load"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            visible="@{viewModel.isShowError}"
            android:id="@+id/btnTry"
            android:layout_centerInParent="true"
            android:onClick="@{()-> viewModel.onClickError()}"
            android:visibility="gone"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/textStandardWhite"
            android:textSize="@dimen/text_h6"
            android:textColor="@color/white"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/margin_large"
            android:layout_centerHorizontal="true"
            android:textAlignment="center"
            android:id="@+id/textStatus"
            showTextStatus="@{viewModel.message}"
            android:fontFamily="@font/roboto_regular"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>
</layout>
